--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="./img/title-icon.png">
     <link rel="stylesheet" href="./css/main.css">
     <title> Snow-Effect ❄|| JavaScript </title>
 </head>
 <body>
-    <i class="fas fa-snowflake"></i>
+    <header>
+        <i class="fas fa-snowflake"></i>
+    </header>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
